# krkrrel-ng

./: .gitmodules  CMakeLists.txt  README.en_US.md  README.md  cross-file-macos-universal.txt  meson.build
.github/workflows/: ci.yml
src/: krkrrel.cpp
src/krkr_minimal/base/: BinaryStream.cpp  StorageIntf.cpp  StorageIntf.h  TextStream.cpp  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h
src/krkr_minimal/base/android/: StorageImpl.cpp  StorageImpl.h
src/krkr_minimal/base/win32/: StorageImpl.cpp  StorageImpl.h
src/krkr_minimal/msg/: MsgIntf.cpp  MsgIntfInc.h
src/krkr_minimal/msg/android/: MsgImpl.cpp  MsgLoad.cpp
src/krkr_minimal/tjs2/: tjsCommHead.h  tjsConfig.cpp  tjsConfig.h  tjsDate.cpp  tjsString.h  tjsTypes.h  tjsUtils.h
src/krkr_minimal/utils/: DebugIntf.cpp  DebugIntf.h
